--- a/mobile/style/style.css
+++ b/mobile/style/style.css
@@ -1,6 +1,6 @@
 body {
 	margin: 0px;
-	overflow-x: hidden;
+	overflow: hidden;
 	background-color: black;
 	user-select: none;
 	-webkit-touch-callout: none;
