--- a/style/doc.css
+++ b/style/doc.css
@@ -75,6 +75,7 @@ h3 {
 	-webkit-touch-callout: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
+	letter-spacing: 0.03em;
 }
 
 p {
@@ -97,6 +98,14 @@ a {
 a:hover {
 	color: red;
 	transition: 0.2s;
+}
+
+img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 100%;
+	max-width: 600px;
 }
 
 
@@ -159,6 +168,8 @@ a:hover {
 	transition: 0.15s;
 	position: relative;
 	top: 0px;
+	display: inline-block;
+	width: auto;
 }
 
 #footer-social img:hover {
