--- a/style/doc.css
+++ b/style/doc.css
@@ -3,6 +3,13 @@ body {
 	margin: 0px;
 	position: relative;
 	top: calc(50vh - 100px);
+	overflow-x: hidden;
+}
+
+#body {
+	overflow-x: hidden;
+	width: 100%;
+	max-width: 100vw;
 }
 
 @font-face {
