--- a/style/style.css
+++ b/style/style.css
@@ -1061,9 +1061,10 @@ body {
 }
 }
 
+
 ::selection {
-	color: white;
-	background-color: red;
+    background-color: rgb(255,0,0);
+    color: white;
 }
 
 
