--- a/style/style.css
+++ b/style/style.css
@@ -591,6 +591,7 @@ body {
 #second {
 	background-color: white;
 	min-height: calc(100vh - 100px);
+	transition: 0.3s;
 }
 
 #second-imgcontainer {
@@ -775,6 +776,7 @@ body {
 	background-color: white;
 	padding-bottom: 20px;
 	padding-top: 100px;
+	transition: 0.3s;
 }
 
 #fourth h1 {
