--- a/style/style.css
+++ b/style/style.css
@@ -967,6 +967,85 @@ body {
 
 /*  /Fifth  */
 
+/*  Sixth  */
+
+
+#sixth {
+	margin-top: 300px;
+	text-align: center;
+	user-select: none;
+	-webkit-touch-callout: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+}
+
+#sixth h1 {
+	color: white;
+	font-family: lemonmilk;
+	margin: 0px;
+	padding: 0px;
+	font-size: 4em;
+	user-select: none;
+	-webkit-touch-callout: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	display: inline-block;
+	margin-bottom: 60px;
+}
+
+#sixth-container {
+	width: 300px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+#sixth-top {
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	height: 296px;
+	border: 2px solid transparent;
+	width: 296px;
+	transition: 1s;
+}
+
+.sixth-top-back {
+	width: 296px;
+	height: 296px;
+	background-position: center bottom;
+	background-size: 296px 296px;
+	background-repeat: no-repeat;
+	position: relative;
+	transition: 0.3s;
+	top: -300px;
+	transform: scale(0.9);
+	border: 2px solid black;
+	z-index: -1;
+}
+
+.sixth-top-size {
+	width: 300px;
+	height: 0px;
+	transition: 0.6s;
+}
+
+#sixth-container:hover .sixth-top-back {
+	transition: 0.6s;
+	top: 10px;
+}
+
+#sixth-container:hover .sixth-top-size {
+	height: 300px;
+}
+
+#sixth-container:hover #sixth-top {
+	border: 2px solid white;
+	transition: 0.4s;
+}
+
+
+/*  /Sixth  */
+
 /*  Footer  */
 
 
